--- a/RestaurantAPI/appsettings.json
+++ b/RestaurantAPI/appsettings.json
@@ -1,8 +1,10 @@
 {
+  "AllowedOrigins": "http://localhost:8080",
+
   "Authentication": {
     "JwtKey": "PRIVATE_KEY_DONT_SHARE",
     "JwtExpireDays": 15,
-    "JwtIssuer":  "http://restaurantapi.com"
+    "JwtIssuer": "http://restaurantapi.com"
   },
   "ConnectionStrings": {
     "RestaurantDB": "server=ELCONL-48087;Database=RestaurantDB;Trusted_Connection=True;TrustServerCertificate=True"
